<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/tv_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tv_now_playing"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
            android:id="@+id/rv_carousel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/tv_now_playing"
            app:layout_constraintTop_toBottomOf="@id/tv_now_playing"
            tools:listitem="@layout/items_now_playing" />

        <TextView
            android:id="@+id/tv_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/popular"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_more_popular"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_carousel" />

        <TextView
            android:id="@+id/tv_more_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/more_popular"
            android:text="@string/view_all"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_carousel" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/tv_more_popular"
            app:layout_constraintStart_toStartOf="@id/tv_popular"
            app:layout_constraintTop_toBottomOf="@id/tv_popular"
            tools:listitem="@layout/items_popular" />

        <TextView
            android:id="@+id/tv_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/top_rated"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_more_top_rated"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_popular" />

        <TextView
            android:id="@+id/tv_more_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/more_popular"
            android:text="@string/view_all"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_popular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_rated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/tv_more_top_rated"
            app:layout_constraintStart_toStartOf="@id/tv_top_rated"
            app:layout_constraintTop_toBottomOf="@id/tv_top_rated"
            tools:listitem="@layout/items_top_rated" />

        <TextView
            android:id="@+id/tv_up_coming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/up_coming"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tv_more_up_coming"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_top_rated" />

        <TextView
            android:id="@+id/tv_more_up_coming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/up_coming"
            android:text="@string/view_all"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_top_rated" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_up_coming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/tv_more_up_coming"
            app:layout_constraintStart_toStartOf="@id/tv_up_coming"
            app:layout_constraintTop_toBottomOf="@id/tv_up_coming"
            tools:listitem="@layout/items_up_coming" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>