<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimaryVariant"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:titleCollapseMode="scale">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@color/teal_200" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <RatingBar
                android:id="@+id/rb_movie"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="@color/md_yellow_100"
                android:stepSize="0.1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rb_movie"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:listitem="@layout/items_genre" />

            <View
                android:id="@+id/v_genre"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/rv_genre"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/placeholder" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/v_genre"
                android:layout_marginTop="8dp"
                android:text="@string/overview"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/overview"
                android:layout_marginTop="4dp"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/similar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_overview"
                android:layout_marginTop="8dp"
                android:text="@string/similar"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_similar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/similar"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:listitem="@layout/items_similar" />

            <TextView
                android:id="@+id/recommendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_similar"
                android:layout_marginTop="8dp"
                android:text="@string/recommendations"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recommendations"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                tools:listitem="@layout/items_similar" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>